--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">A cerca</div>
             <p>Hola! Soy Pablo Pérez, Web Developer</p>
-            <p>Soy una persona apasionada por lo que hago me encanta divertirme haciendo sitios web <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Aprende más</a></p>
+            <p>Soy una persona apasionada por lo que hago me encanta divertirme haciendo sitios web originales <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Aprende más</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
